Use blueprint, so add a main model,change the route  and config from config.py.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
                 <p>
                 说说小爱同学特别好玩的事
                 </p>
-                <button type="button" name="button" class="ui inverted blue button">Read more<a class="link" href="{{url_for('post',postnum='1')}}"></a> </button>
+                <button type="button" name="button" class="ui inverted blue button">Read more<a class="link" href="{{url_for('.post',postnum='1')}}"></a> </button>
             </div>
 
             <div class="ui container segment">
