--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% block headerlogo  %}
+{{super()}}
+
+{%  endblock %}
 {% block content %}
 
  <div class="ui center aligned grid">
