--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,66 +1,131 @@
 <!DOCTYPE html>
-<html lang="zh-hans">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This is my blog website." />
-    <meta name="author" content="shauway" />
-    <link rel="shortcut icon" href="{{url_for('static', filename='image/favicon.ico')}}">
-    <script src="{{url_for('static', filename='css/jquery-3.3.1.min.js', _external=True)}}" </script>
-    <script src="{{url_for('static', filename='css/semantic.min.js', _external=True)}}" </script>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/semantic.min.css', _external=True)}}">
+<html lang="zh-CN">
 
-    <title> {% block title %}小卫的日常{% endblock %}  </title>
-<head>
-<body>
-    <div class="ui inverted blue  massive secondary pointing  menu">
-            <a style="position:relative;top:10px" class="ui fluid left "><i class="cn flag"></i></a><a class="item" href="/">首页</a><a class="item" href="/about">关于</a><a class="item" href="/contact">联系</a>
-            <div class="right menu">
-                {% if current_user.is_authenticated %}
-                <a class="item right " href="{{url_for('auth.logout')}}">{{ current_user.username}}退出</a>
-                {% else %}
-                <a class="right  item" href="{{url_for('auth.register')}}">注册</a>
-                <a class="right  item" href="{{url_for('auth.login')}}">登录</a>
-                {% endif %}
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="this is my website">
+    <meta name="author" content="shauway">
+    <link rel="shortcut icon" href="{{ url_for('static',filename='img/favicon.ico',_external=True)}}"/> 
+
+    <!-- Bootstrap core CSS -->
+    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    <link href="{{url_for('static',filename='css/clean-blog.min.css')}}" rel="stylesheet">
+
+    {% block title %}
+    <title>Shauway</title>
+    {% endblock  %}
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+          <a class="navbar-brand" href="/">Shauway</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{{url_for('main.about')}}">About</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{{url_for('main.post')}}">Post</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{{url_for('main.contact')}}">Contact</a>
+            {% if current_user.is_authenticated %}
+            <li class="nav-item">
+            <a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a>
+            {% else %}
+            <li class="nav-item">
+            <a class="nav-link" href="{{url_for('auth.login')}}">Login</a>
+            {% endif %}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Page Header -->
+    {% block headerlogo  %}
+    <header class="masthead" style="background-image: url('static/img/home-bg.jpg')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-md-12 mx-auto">
+            <div class="site-heading">
+                <h1>铭记方向</h1>
+                <h2>不被生活压倒</h2>
             </div>
-    </div>
-        {% for message in get_flashed_messages() %}
-    <div class="ui error message transition ">
-          <i class="close icon" ></i>
-            <div class="hidden header" >
-                                {{ message }}
-                      </div>
-                                  </div>
-                                        {% endfor %}
- 
-    {% block content %}
-    {% endblock %}
-    {%block footer %}
- <div class="ui vertical footer segment">
-    <div class="ui center aligned container">
-      <div class="ui stackable divided grid">
-        <div class="nine wide column">
-          <h4 class="ui header">社交网络</h4>
-          <div class="ui link list">
-              <a href="" class="item"><i class="weixin icon"></i>Wechat:  Shauway</a>
-              <a href="mailto:admin@cuiwei.vip" class="item"><i class="mail icon"></i>Email: admin@cuiwei.vip</a>
-              <a href="" class="item"><i class="qq icon"></i>QQ: 275670092</a>
           </div>
         </div>
-        <div class="seven wide column">
-          <h4 class="ui header">小卫的微信号</h4>
-          <div class="small image">
-              <img src="{{url_for('static',filename='image/weixin.png')}}" width="30%" height="30%" >
       </div>
+    </header>
+    {%  endblock %}
+
+    {% block content %}
+
+    {% endblock %}
+    
+    {% block footer %}
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <p class="copyright text-muted">Copyright &copy; Shauway 2018</p>
+          </div>
         </div>
       </div>
-      <div class="ui section divider"></div>
-      <img src="{{url_for('static',filename='image/font-black.png')}}" class="ui centered mini image">
-      <div class="ui horizontal small padded  divided ">
-          <div>Powered By Shauway</div>
-      </div>
-    </div>
+    </footer>
     {% endblock %}
-</body>
-<html>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{url_for('static', filename='vendor/jquery/jquery.min.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{{url_for('static', filename='js/clean-blog.min.js')}}"></script>
+
+  </body>
+
+</html>
