--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,42 +1,34 @@
-{% extends 'base.html' %}
-{% block title %}首页{% endblock %}
-{% block content %}
-
-
-        <div class="ui  vertical  segment">
-            <div class="ui container segment">
-                <div class="ui blue right ribbon label">
-                    life
-                </div>
-                <h1 class="ui header">小爱同学实际体验如何?</h1>
-                <p>
-                说说小爱同学特别好玩的事
-                </p>
-                <button type="button" name="button" class="ui inverted blue button">Read more<a class="link" href="{{url_for('.post',postnum='1')}}"></a> </button>
-            </div>
-
-            <div class="ui container segment">
-                <div class="ui red right ribbon label">
-                    tech
-                </div>
-                <h1 class="ui header">网站架构设计</h1>
-                <p>
-                介绍本网站的架构
-
-                </p>
-                <button type="button" name="button" class="ui inverted blue button">Read more</button>
-            </div>
-
-            <div class="ui container segment">
-                <div class="ui teal right ribbon label">
-                    tech
-                </div>
-                <h1 class="ui header">Flask 学习</h1>
-                <p>
-                   最近开始学习FlaskWeb开发：基于Python的Web应用开发实战.pdf,将记录一些学习的过程。
-                </p>
-                <button type="button" name="button" class="ui inverted blue button">Read more</button>
-            </div>
+{% extends 'base.html'  %}
+{%  block content %}
+    <!-- Main Content -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+    {% for post in posts %}
+          <div class="post-preview">
+              <a href="{{url_for('main.post')}}">
+              <h2 class="post-title">
+                  {{ post.title }}
+              </h2>
+              <h3 class="post-subtitle">
+                  {{ post.subtitle }}
+              </h3>
+            </a>
+            <p class="post-meta">Posted by
+            <a href="#">{{ post.author.username }}</a>
+            At {{ post.timestamp }}</p>
+          </div>
+          <hr>
+    {% endfor %}
+          <!-- Pager -->
+          <div class="clearfix">
+            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          </div>
         </div>
+      </div>
+    </div>
 
-{% endblock %}
+    <hr>
+
+    {%  endblock %}
+
